Adds config for IfW v1.10.0

--- a/config/icinga/Invoke-IcingaCheckDirectory.conf
+++ b/config/icinga/Invoke-IcingaCheckDirectory.conf
@@ -8,8 +8,21 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 11
         }
         "-FileSizeGreaterThan" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_FileSizeGreaterThan$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '20MB', which translates to the filze size 20 MB. Allowed units: B, KB, MB, GB, TB.  Thereby all files with a size of 20 MB or larger are considered within the check."
-            value = "$IcingaCheckDirectory_String_FileSizeGreaterThan$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_FileSizeGreaterThan$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 20
         }
         "-C" = {
@@ -27,8 +40,21 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 10
         }
         "-CreationYoungerThan" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_CreationYoungerThan$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have a creation date younger then 20 days are considered within the check."
-            value = "$IcingaCheckDirectory_String_CreationYoungerThan$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_CreationYoungerThan$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 19
         }
         "-Warning" = {
@@ -37,8 +63,21 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 5
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckDirectory_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-Verbosity" = {
@@ -47,8 +86,21 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 22
         }
         "-ChangeTimeEqual" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_ChangeTimeEqual$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have been changed 20 days ago are considered within the check."
-            value = "$IcingaCheckDirectory_String_ChangeTimeEqual$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_ChangeTimeEqual$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 14
         }
         "-CountFolderAsFile" = {
@@ -66,8 +118,21 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 9
         }
         "-Path" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_Path$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a path. e.g. 'C:\\Users\\Icinga\\Downloads'"
-            value = "$IcingaCheckDirectory_String_Path$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_Path$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 2
         }
         "-NoPerfData" = {
@@ -75,8 +140,21 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 99
         }
         "-ChangeOlderThan" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_ChangeOlderThan$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have a change date older then 20 days are considered within the check."
-            value = "$IcingaCheckDirectory_String_ChangeOlderThan$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_ChangeOlderThan$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 16
         }
         "-CriticalTotalSize" = {
@@ -95,34 +173,61 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 13
         }
         "-FileSizeSmallerThan" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_FileSizeSmallerThan$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '5MB', which translates to the filze size 5 MB. Allowed units: B, KB, MB, GB, TB.  Thereby all files with a size of 5 MB or less are considered within the check."
-            value = "$IcingaCheckDirectory_String_FileSizeSmallerThan$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_FileSizeSmallerThan$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 21
         }
         "-CreationTimeEqual" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_CreationTimeEqual$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have been created 20 days ago are considered within the check."
-            value = "$IcingaCheckDirectory_String_CreationTimeEqual$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_CreationTimeEqual$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 17
         }
         "-FileNames" = {
             description = "Used to specify an array of filenames or expressions to match against results to filter for specific files.  e.g '*.txt', '*.sql', finds all files ending with .txt and .sql"
             value = {{
                 var arr = macro("$IcingaCheckDirectory_Array_FileNames$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 3
         }
@@ -132,13 +237,39 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 8
         }
         "-CreationOlderThan" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_CreationOlderThan$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have a creation date older then 20 days are considered within the check."
-            value = "$IcingaCheckDirectory_String_CreationOlderThan$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_CreationOlderThan$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 18
         }
         "-ChangeYoungerThan" = {
+            set_if = {{
+                var str = macro("$IcingaCheckDirectory_String_ChangeYoungerThan$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have a change date younger then 20 days are considered within the check."
-            value = "$IcingaCheckDirectory_String_ChangeYoungerThan$"
+            value = {{
+                var str = macro("$IcingaCheckDirectory_String_ChangeYoungerThan$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 15
         }
         "-ShowFileList" = {
