--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -15,21 +15,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of messages within the eventlog to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeMessage$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 11
         }
@@ -37,21 +38,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of message sources within the eventlog to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeSource$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 13
         }
@@ -64,27 +66,41 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of events identified by their id to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeEventId$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 5
         }
         "-LogName" = {
+            set_if = {{
+                var str = macro("$IcingaCheckEventlog_String_LogName$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a certain log."
-            value = "$IcingaCheckEventlog_String_LogName$"
+            value = {{
+                var str = macro("$IcingaCheckEventlog_String_LogName$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 4
         }
         "-C" = {
@@ -92,29 +108,43 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 0
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckEventlog_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckEventlog_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckEventlog_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-ExcludeSource" = {
             description = "Used to specify an array of message sources within the eventlog to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeSource$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 14
         }
@@ -122,21 +152,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of usernames within the eventlog to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeUsername$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 8
         }
@@ -144,21 +175,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of entry types within the eventlog to be excluded. Please note that `SuccessAudit` and `FailureAudit` only apply to the `Security` EventLog."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeEntryType$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 10
         }
@@ -166,21 +198,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of entry types within the eventlog to be included. Please note that `SuccessAudit` and `FailureAudit` only apply to the `Security` EventLog."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeEntryType$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 9
         }
@@ -198,21 +231,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of events identified by their id to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeEventId$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 6
         }
@@ -234,21 +268,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of usernames within the eventlog to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeUsername$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 7
         }
@@ -256,21 +291,22 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of messages within the eventlog to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeMessage$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 12
         }
