--- a/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
+++ b/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
@@ -5,21 +5,22 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
         "-StatusCode" = {
             value = {{
                 var arr = macro("$IcingaCheckHTTPStatus_Array_StatusCode$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 14
         }
@@ -36,32 +37,59 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             description = "Used to specify an array of regex-match-strings to match against the content of the webrequest response."
             value = {{
                 var arr = macro("$IcingaCheckHTTPStatus_Array_Content$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 13
         }
         "-ProxyUsername" = {
+            set_if = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_ProxyUsername$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a proxy username as string to authenticate with. Use with: -ProxyPassword & -ProxyServer"
-            value = "$IcingaCheckHTTPStatus_String_ProxyUsername$"
+            value = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_ProxyUsername$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 10
         }
         "-Username" = {
+            set_if = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_Username$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a username as string to authenticate with. Authentication is only possible with 'https://'. Use with: -Password"
-            value = "$IcingaCheckHTTPStatus_String_Username$"
+            value = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_Username$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 8
         }
         "-AddOutputContent" = {
@@ -73,8 +101,21 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 0
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckHTTPStatus_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-Negate" = {
@@ -92,8 +133,21 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 2
         }
         "-ProxyServer" = {
+            set_if = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_ProxyServer$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a proxy server as string to authenticate with."
-            value = "$IcingaCheckHTTPStatus_String_ProxyServer$"
+            value = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_ProxyServer$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 12
         }
         "-ProxyPassword" = {
@@ -106,8 +160,21 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 15
         }
         "-VHost" = {
+            set_if = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_VHost$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a VHost as string."
-            value = "$IcingaCheckHTTPStatus_String_VHost$"
+            value = {{
+                var str = macro("$IcingaCheckHTTPStatus_String_VHost$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 5
         }
         "-Critical" = {
@@ -119,21 +186,22 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             description = "Used to specify headers as Array. Like: -Headers 'Accept:application/json'"
             value = {{
                 var arr = macro("$IcingaCheckHTTPStatus_Array_Headers$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 6
         }
@@ -146,21 +214,22 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             description = "Used to specify the URL of the host to check http as string. Use 'http://' or 'https://' to actively chose a protocol. Likewise ':80' or any other port number to specify a port, etc."
             value = {{
                 var arr = macro("$IcingaCheckHTTPStatus_Array_Url$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 4
         }
