--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -3,13 +3,39 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
 
     arguments += {
         "-WarningNextRunTime" = {
+            set_if = {{
+                var str = macro("$IcingaCheckScheduledTask_String_WarningNextRunTime$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Allows to specify a time interval, on which the check will return warning based on the next run time of a task and the current time. The value will be added to the current time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
-            value = "$IcingaCheckScheduledTask_String_WarningNextRunTime$"
+            value = {{
+                var str = macro("$IcingaCheckScheduledTask_String_WarningNextRunTime$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 8
         }
         "-CriticalNextRunTime" = {
+            set_if = {{
+                var str = macro("$IcingaCheckScheduledTask_String_CriticalNextRunTime$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Allows to specify a time interval, on which the check will return critical based on the next run time of a task and the current time. The value will be added to the current time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
-            value = "$IcingaCheckScheduledTask_String_CriticalNextRunTime$"
+            value = {{
+                var str = macro("$IcingaCheckScheduledTask_String_CriticalNextRunTime$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 9
         }
         "-NoPerfData" = {
@@ -21,8 +47,21 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             order = 0
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckScheduledTask_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckScheduledTask_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckScheduledTask_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-WarningMissedRuns" = {
@@ -38,27 +77,41 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             description = "A list of tasks to check for. If your tasks contain spaces, wrap them around a ' to ensure they are properly handled as string"
             value = {{
                 var arr = macro("$IcingaCheckScheduledTask_Array_TaskName$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 2
         }
         "-CriticalLastRunTime" = {
+            set_if = {{
+                var str = macro("$IcingaCheckScheduledTask_String_CriticalLastRunTime$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Allows to specify a time interval, on which the check will return critical based on the last run time of a task and the current time. The value will be subtracted from the current time  Values have to be specified as time units like, -10m, -1d, -1w, -2M, -1y"
-            value = "$IcingaCheckScheduledTask_String_CriticalLastRunTime$"
+            value = {{
+                var str = macro("$IcingaCheckScheduledTask_String_CriticalLastRunTime$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 7
         }
         "-CriticalMissedRuns" = {
@@ -70,21 +123,22 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             description = "The state a task should currently have for the plugin to return [OK]"
             value = {{
                 var arr = macro("$IcingaCheckScheduledTask_Array_State$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 3
         }
@@ -94,8 +148,21 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             order = 10
         }
         "-WarningLastRunTime" = {
+            set_if = {{
+                var str = macro("$IcingaCheckScheduledTask_String_WarningLastRunTime$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Allows to specify a time interval, on which the check will return warning based on the last run time of a task and the current time. The value will be subtracted from the current time  Values have to be specified as time units like, -10m, -1d, -1w, -2M, -1y"
-            value = "$IcingaCheckScheduledTask_String_WarningLastRunTime$"
+            value = {{
+                var str = macro("$IcingaCheckScheduledTask_String_WarningLastRunTime$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 6
         }
     }
