--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -11,8 +11,21 @@ object CheckCommand "Invoke-IcingaCheckService" {
             order = 99
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckService_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckService_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckService_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-Verbosity" = {
@@ -24,27 +37,41 @@ object CheckCommand "Invoke-IcingaCheckService" {
             description = "Allows to include only services with a specific startup type inside the monitoring, in case you check for a list of specific services by using `-Service`"
             value = {{
                 var arr = macro("$IcingaCheckService_Array_FilterStartupType$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 5
         }
         "-Status" = {
+            set_if = {{
+                var str = macro("$IcingaCheckService_String_Status$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Status for the specified service or services to check against."
-            value = "$IcingaCheckService_String_Status$"
+            value = {{
+                var str = macro("$IcingaCheckService_String_Status$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 4
         }
         "-NoPerfData" = {
@@ -55,21 +82,22 @@ object CheckCommand "Invoke-IcingaCheckService" {
             description = "Used to specify an array of services which should be checked against the status. Supports '*' for wildcards."
             value = {{
                 var arr = macro("$IcingaCheckService_Array_Service$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 2
         }
@@ -77,21 +105,22 @@ object CheckCommand "Invoke-IcingaCheckService" {
             description = "Allows to exclude services which might come in handy for checking services which are configured to start automatically on Windows but are not running and weren't exited properly."
             value = {{
                 var arr = macro("$IcingaCheckService_Array_Exclude$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 3
         }
