--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -21,21 +21,22 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of Subjects, which are used to determine what certificate to check, within the CertStore."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertSubject$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 7
         }
@@ -58,13 +59,39 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             order = 2
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckCertificate_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckCertificate_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckCertificate_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-CertStore" = {
+            set_if = {{
+                var str = macro("$IcingaCheckCertificate_String_CertStore$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify which CertStore to check. Valid choices are 'None', '*', 'LocalMachine', 'CurrentUser'. Use 'None' if you do not want to check the certificate store (Default)"
-            value = "$IcingaCheckCertificate_String_CertStore$"
+            value = {{
+                var str = macro("$IcingaCheckCertificate_String_CertStore$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 5
         }
         "-Trusted" = {
@@ -75,21 +102,22 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of exclusions, tested against Subject, Subject Alternative Name, Issuer and Thumbprint."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_ExcludePattern$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 8
         }
@@ -97,21 +125,22 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of paths on your system, where certificate files are. Use with CertName."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertPaths$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 10
         }
@@ -119,21 +148,22 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of Thumbprints, which are used to determine what certificate to check, within the CertStore."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertThumbprint$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 6
         }
@@ -145,21 +175,22 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of certificate names of certificate files to check. Use with CertPaths."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertName$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 11
         }
