--- a/config/icinga/Invoke-IcingaCheckCheckSum.conf
+++ b/config/icinga/Invoke-IcingaCheckCheckSum.conf
@@ -7,13 +7,39 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
             order = 0
         }
         "-Algorithm" = {
+            set_if = {{
+                var str = macro("$IcingaCheckCheckSum_String_Algorithm$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a string, which contains the algorithm to be used.  Allowed algorithms: 'SHA1', 'SHA256', 'SHA384', 'SHA512', 'MD5'"
-            value = "$IcingaCheckCheckSum_String_Algorithm$"
+            value = {{
+                var str = macro("$IcingaCheckCheckSum_String_Algorithm$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 3
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckCheckSum_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckCheckSum_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckCheckSum_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-Verbosity" = {
@@ -22,7 +48,20 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
             order = 5
         }
         "-Hash" = {
-            value = "$IcingaCheckCheckSum_String_Hash$"
+            set_if = {{
+                var str = macro("$IcingaCheckCheckSum_String_Hash$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            value = {{
+                var str = macro("$IcingaCheckCheckSum_String_Hash$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 4
         }
         "-NoPerfData" = {
@@ -30,7 +69,20 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
             order = 99
         }
         "-Path" = {
-            value = "$IcingaCheckCheckSum_String_Path$"
+            set_if = {{
+                var str = macro("$IcingaCheckCheckSum_String_Path$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            value = {{
+                var str = macro("$IcingaCheckCheckSum_String_Path$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 2
         }
     }
