--- a/config/icinga/Invoke-IcingaCheckMPIO.conf
+++ b/config/icinga/Invoke-IcingaCheckMPIO.conf
@@ -12,8 +12,21 @@ object CheckCommand "Invoke-IcingaCheckMPIO" {
             order = 4
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckMPIO_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckMPIO_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckMPIO_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-Warning" = {
