--- a/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
+++ b/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
@@ -31,8 +31,21 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 13
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckNetworkInterface_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckNetworkInterface_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckNetworkInterface_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-DeviceReceivedBytesSecCrit" = {
@@ -103,21 +116,22 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the index of network adapters you want to include for checks. Example 4, 3"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_IncludeNetworkDevice$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 2
         }
@@ -145,21 +159,22 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the name of network interface teams you want to include for checks. Example OutboundGroup, ClusterInterface"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_IncludeInterfaceTeam$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 5
         }
@@ -202,21 +217,22 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the index of network adapters you want to exclude for checks. Example 4, 3"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_ExcludeNetworkDevice$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 3
         }
@@ -229,21 +245,22 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the name of network interface teams you want to exclude for checks. Example OutboundGroup, ClusterInterface"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_ExcludeInterfaceTeam$");
-                    if (len(arr) == 0) {
-                        return "@()";
-                    }
-                    return arr.map(
-                        x => if (typeof(x) == String) {
-                            var argLen = len(x);
-                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
-                                x;
-                            } else {
-                                "'" + x + "'";
-                            }
-                        } else {
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
                             x;
+                        } else {
+                            "'" + x + "'";
                         }
-                    ).join(",");
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
             }}
             order = 4
         }
