--- a/config/icinga/Invoke-IcingaCheckTimeSync.conf
+++ b/config/icinga/Invoke-IcingaCheckTimeSync.conf
@@ -36,8 +36,21 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
             order = 5
         }
         "-Server" = {
+            set_if = {{
+                var str = macro("$IcingaCheckTimeSync_String_Server$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "The NTP Server you want to connect to."
-            value = "$IcingaCheckTimeSync_String_Server$"
+            value = {{
+                var str = macro("$IcingaCheckTimeSync_String_Server$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 2
         }
         "-TimeOffset" = {
@@ -50,8 +63,21 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
             order = 99
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckTimeSync_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckTimeSync_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckTimeSync_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
     }
