--- a/config/icinga/Invoke-IcingaCheckUNCPath.conf
+++ b/config/icinga/Invoke-IcingaCheckUNCPath.conf
@@ -7,13 +7,39 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 0
         }
         "-Path" = {
+            set_if = {{
+                var str = macro("$IcingaCheckUNCPath_String_Path$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "The path to a volume or network share you want to monitor, like '\\\\example.com\\Home' or 'C:\\ClusterSharedVolume\\Volume1'"
-            value = "$IcingaCheckUNCPath_String_Path$"
+            value = {{
+                var str = macro("$IcingaCheckUNCPath_String_Path$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 2
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckUNCPath_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckUNCPath_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckUNCPath_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-Verbosity" = {
@@ -50,8 +76,21 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 99
         }
         "-DisplayAlias" = {
+            set_if = {{
+                var str = macro("$IcingaCheckUNCPath_String_DisplayAlias$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Modifies the plugin output to not display the value provided within the `-Path` argument but to use this string value instead of shorten the output and make it more visual appealing."
-            value = "$IcingaCheckUNCPath_String_DisplayAlias$"
+            value = {{
+                var str = macro("$IcingaCheckUNCPath_String_DisplayAlias$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 3
         }
     }
