--- a/config/icinga/Invoke-IcingaCheckUptime.conf
+++ b/config/icinga/Invoke-IcingaCheckUptime.conf
@@ -12,18 +12,57 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
             order = 4
         }
         "-ThresholdInterval" = {
+            set_if = {{
+                var str = macro("$IcingaCheckUptime_String_ThresholdInterval$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckUptime_String_ThresholdInterval$"
+            value = {{
+                var str = macro("$IcingaCheckUptime_String_ThresholdInterval$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 100
         }
         "-Warning" = {
+            set_if = {{
+                var str = macro("$IcingaCheckUptime_String_Warning$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a Warning threshold. In this case a string. Allowed units include: ms, s, m, h, d, w, M, y"
-            value = "$IcingaCheckUptime_String_Warning$"
+            value = {{
+                var str = macro("$IcingaCheckUptime_String_Warning$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 2
         }
         "-Critical" = {
+            set_if = {{
+                var str = macro("$IcingaCheckUptime_String_Critical$"); if (len(str) == 0) { return false; }; return true;
+            }}
             description = "Used to specify a Critical threshold. In this case a string. Allowed units include: ms, s, m, h, d, w, M, y"
-            value = "$IcingaCheckUptime_String_Critical$"
+            value = {{
+                var str = macro("$IcingaCheckUptime_String_Critical$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
             order = 3
         }
         "-NoPerfData" = {
